@@ -4,7 +4,7 @@ import laddarGame.dto.LineDto;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -15,17 +15,17 @@ class LineTest {
     @Test
     void isDuplicateHorizontal() {
         assertThrows(IllegalArgumentException.class,
-                () -> new Line(Arrays.asList(true, true, false)));
+                () -> new Line(List.of(true, true, false)));
     }
 
     @DisplayName("DTO 를 반환 한다.")
     @Test
     void createDto() {
-        Line line = new Line(Arrays.asList(true, false, false));
+        Line line = new Line(List.of(true, false, false));
 
         LineDto lineDto = line.lineDto();
 
-        assertEquals(new LineDto(Arrays.asList(true, false, false)), lineDto);
+        assertEquals(new LineDto(List.of(true, false, false)), lineDto);
     }
 
 }
